fix navbar link height and image margin for better alignment

--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,7 @@ body {
 }
 
 .navbar a {
+  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -38,6 +39,10 @@ body {
   text-decoration: none;
   font-size: 18px;
   margin: 30px;
+}
+
+.navbar a img {
+  margin-right: 5px;
 }
 
 .navbar a:focus {
